--- a/htmlEngine.html
+++ b/htmlEngine.html
@@ -35,7 +35,7 @@
                 <button id="startButton" onclick="selectStart()">START</button>
                 <button id="finishButton" onclick="selectFinish()">FINISH</button>
                 <button id="wallButton" onclick="selectWall()">WALL</button>
-                <button id="runButton">RUN</button>
+                <button id="runButton" onclick="run()">RUN</button>
                 <button id="stopButton">STOP</button>
                 <button id="resetButton" onclick="reset()">RESET</button>
             </div>
@@ -52,7 +52,7 @@
             </ul>
         </footer>
         <script type="text/babel">
-            var start = false, finish = false, wall = false;
+            var start = false, finish = false, wall = false, hasStart = false, hasFinish = false;
             function selectStart()
             {
                 start = true;
@@ -77,8 +77,10 @@
                     for(var j = 1;j <= 20;j++)
                     {   
                         console.log("id"+(i*10+j));
-                        var button = document.getElementById("id"+i/10+i%10+j/10+j%10);
+                        var button = document.getElementById("id"+parseInt(i/10)+i%10+parseInt(j/10)+j%10);
+                        button.style.animationName = "";
                         button.style.backgroundColor = "white";
+                        matrix[i][j] = 0;
                     }
             }
             var previous1 = null, previous2 = null;
@@ -88,43 +90,115 @@
                 if(start === true)
                 {
                     if(previous1 != null)
-                        previous1.style.backgroundColor = "white";
-                    e.target.style.backgroundColor = "yellowgreen";
+                    {
+                        previous1.style.animationName = "";
+                        var i = parseInt(previous1.id[2])*10+parseInt(previous1.id[3]);
+                        var j = parseInt(previous1.id[4])*10+parseInt(previous1.id[5]);
+                        matrix[i][j] = 0;
+                    }
+                    e.target.style.animationName = "anGreen";
+                    e.target.style.animationDuration = "2s";
+                    e.target.style.animationFillMode = "forwards";
                     start = false;
+                    hasStart = true;
+                    var i = parseInt(e.target.id[2])*10+parseInt(e.target.id[3]);
+                    var j = parseInt(e.target.id[4])*10+parseInt(e.target.id[5]);
+                    matrix[i][j] = -3;
                     previous1 = e.target;
                 }
                 else if(finish === true)
                 {
                     if(previous2 != null)
-                        previous2.style.backgroundColor = "white";
-                    e.target.style.backgroundColor = "red";
+                    {
+                        previous2.style.animationName = "";
+                        var i = parseInt(e.target.id[2])*10+parseInt(e.target.id[3]);
+                        var j = parseInt(e.target.id[4])*10+parseInt(e.target.id[5]);
+                        matrix[i][j] = 0;
+                    }
+                    e.target.style.animationName = "anRed";
+                    e.target.style.animationDuration = "2s";
+                    e.target.style.animationFillMode = "forwards";
                     finish = false;
+                    hasFinish = true;
+                    var i = parseInt(e.target.id[2])*10+parseInt(e.target.id[3]);
+                    var j = parseInt(e.target.id[4])*10+parseInt(e.target.id[5]);
+                    matrix[i][j] = -2;
                     previous2 = e.target;
                 }
                 else if(wall === true)
-                    e.target.style.backgroundColor = "black";
+                {
+                    e.target.style.animationName = "anBlack";
+                    e.target.style.animationDuration = "1s";
+                    e.target.style.animationFillMode = "forwards";
+                    var i = parseInt(e.target.id[2])*10+parseInt(e.target.id[3]);
+                    var j = parseInt(e.target.id[4])*10+parseInt(e.target.id[5]);
+                    matrix[i][j] = -1;
+                }
             }
-            var previousStart = null, previousFinish = null;
+            var previousStart = null, previousFinish = null, previousWall = null;
             function handleMouseOver(e)
             {
                 e.preventDefault();
-                if(start === true)
+                if(start === true && e.target.style.backgroundColor != "black" && e.target.style.backgroundColor != "yellow")
                 {
                     if(previousStart != null)
                         previousStart.style.backgroundColor = "white";
                     e.target.style.backgroundColor = "yellowgreen";
                     previousStart = e.target;
                 }
-                else if(finish === true)
+                else if(finish === true && e.target.style.backgroundColor != "black" && e.target.style.backgroundColor != "yellow")
                 {
                     if(previousFinish != null)
                         previousFinish.style.backgroundColor = "white";
                     e.target.style.backgroundColor = "red";
                     previousFinish = e.target;
                 }
+                else if(wall === true && e.target.style.backgroundColor != "black" && e.target.style.backgroundColor != "yellow")
+                {
+                    if(previousWall != null)
+                        previousWall.style.backgroundColor = "white";
+                    e.target.style.backgroundColor = "black";
+                    previousWall = e.target;
+                }
+            }
+            const di = [-1, 0, 0, 1], dj = [0, 1, -1, 0];
+            function inMatrix(i, j)
+            {
+                return (i >= 1 && i <= 20 && j >= 1 && j <= 20);
+            }
+            function Lee(iStart, jStart)
+            {
+                for(var d = 0;d < 4;d++)
+                {
+                    var iNou = iStart+di[d];
+                    var jNou = jStart+dj[d];
+                    if(inMatrix(iNou, jNou) && matrix[iNou][jNou] === 0)
+                    {
+                        matrix[iNou][jNou] = 1;
+                        var button = document.getElementById("id"+parseInt(iNou/10)+iNou%10+parseInt(jNou/10)+jNou%10);
+                        button.style.backgroundColor = "yellow";
+                        Lee(iNou, jNou);
+                    }
+                }
+            }
+            function run()
+            {
+                if(hasStart === false)
+                    alert("No starting position selected!");
+                else if(hasFinish === false)
+                    alert("No finish position selected!");
+                var iStart, jStart, stop = false;
+                for(var i = 0;i < 20 && stop === false;i++)
+                    for(var j = 0;j < 20 && stop === false;j++)
+                        if(matrix[i][j] === -3)
+                        {
+                            iStart = i;
+                            jStart = j;
+                            stop = true;
+                        }
+                Lee(iStart, jStart);
             }
             const matrix = [
-                    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ,0 , 0 ,0 ,0],
                     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ,0 , 0 ,0 ,0],
                     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ,0 , 0 ,0 ,0],
                     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ,0 , 0 ,0 ,0],
@@ -154,7 +228,7 @@
                     var j = 0;
                     return ([r.map(c => {
                         j++;
-                        return <button id={"id"+i/10+i%10+j/10+j%10} onClick={handleClick} onMouseOver={handleMouseOver}></button>
+                        return <button id={"id"+parseInt(i/10)+i%10+parseInt(j/10)+j%10} onClick={handleClick} onMouseOver={handleMouseOver}></button>
                     }),
                     <br/>,
                 ])
